<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="MainActivity9"
    android:id="@+id/main"
    android:layout_gravity="center"
    android:background="@color/black">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombreprograma"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textSize="50dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/indicacionesentrar"
        android:padding="5dp"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:background="@color/black"
        />

    <EditText
        android:id="@+id/usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Usuario , E-mail"
        android:textColorHint="@color/white"
        android:layout_margin="4dp"
        android:padding="5dp"
        android:textColor="@color/white"
        android:background="@color/greidwhite"
        />
    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:textColorHint="@color/white"
        android:layout_margin="5dp"
        android:padding="4dp"
        android:inputType="textPassword"
        android:text="ufqqy83779@"
        android:textColor="@color/white"
        android:background="@color/greidwhite"
        />
    <Button
        android:id="@+id/enviar"
        android:layout_width="269dp"
        android:layout_height="55dp"
        android:layout_margin="4dp"
        android:padding="4dp"

        android:text="@string/entrar"

        android:background="@drawable/custom_button"
        android:elevation="8dp"

        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/indicacionesdatedealta"
        android:padding="5dp"
        android:layout_marginTop="100dp"
        android:textColor="@color/white"
        android:background="@color/black"
        android:textSize="25dp"/>

    <Button
        android:id="@+id/alta"

        android:layout_width="269dp"
        android:layout_height="55dp"
        android:layout_margin="4dp"
        android:padding="4dp"
        android:text="@string/Alta"
        android:background="@drawable/custom_button"
        />

    <TextView
        android:id="@+id/linkactualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/actualizaresplicacion"
        android:padding="5dp"
        android:textColor="@color/white"
        android:textSize="30dp"/>



</LinearLayout>